# OManager

./: .gitignore  .python-version  db.py  db_scheme.yml  db_sheme.yml  order_manager.py  pyproject.toml  readme.md  store.db
