[tool.poetry]
name = "omanager"
version = "0.1.0"
description = ""
authors = ["Rob Kano <deathbydissection@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyinstaller = "^3.5"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
