[tool.poetry]
name = "omanager"
version = "0.1.0"
description = ""
authors = ["Rob Kano"]

[tool.poetry.dependencies]
python = "^3.7"
pyinstaller = "^3.5"
pendulum = "^2.0"
tkcalendar = "^1.5"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
